--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -37,18 +37,6 @@
   border-radius: 5px;
 }
 
-.add-button {
-  background: #f6882f url("/wp-content/uploads/drive_add.png") top 5px left 6px no-repeat;
-  background-size: 12px 12px;
-  float: left;
-  height: 22px;
-  padding: 0px 16px 0px 24px;
-  background-color: #f6882f;
-  margin-right: 2px;
-  color: #ffffff;
-  cursor: pointer;
-}
-
 a.add-button {
   text-decoration: none;
   color: #ffffff;
@@ -58,7 +46,7 @@ a.add-button {
   height: 32px;
   width: 100%;
 }
-div.panel-header h1{
+div.panel-header h1 {
   color: #ffffff;
   font-size: 18px;
   line-height: 22px;
@@ -67,17 +55,58 @@ div.panel-header h1{
   margin: 6px 0 0 16px;
   padding: 0;
 }
-div.panel-header .remove-button{
-  margin: 4px 8px;
-  padding-right: 20px;
-  background: url('../img/remove.svg') right 6px no-repeat;
-  background-size: 12px;
-  cursor: pointer;
+
+.remove-server-button {
   color: #ffffff;
+  cursor: pointer;
   font-weight: bold;
-  height: 24px;
+  line-height: 32px;
+
+  height: 32px;
+  margin-right: 10px;
   float: right;
 }
+.remove-server-button span {
+  vertical-align: middle;
+}
+
+.single-x-button {
+  background: black;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  line-height: 20px;
+
+  width: 20px;
+  height: 20px;
+  float: right;
+}
+.single-x-button div {
+  text-align: center;
+}
+.symbol {
+  font-size: 27px;
+}
+.modal .single-x-button {
+ line-height: 27px;
+}
+
+.add-button {
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #f6882f;
+  color: #ffffff;
+  line-height: 22px;
+
+  height: 22px;
+  margin-right: 2px;
+  padding: 0px 5px 0px 6px;
+  float: left;
+}
+.add-button span {
+  vertical-align: middle;
+}
+
 .gray-label {
   top: 0;
   left: 0;
@@ -87,14 +116,6 @@ div.panel-header .remove-button{
   background-color: #f2f2f2;
   padding: 2px 12px 2px 8px;
   display: inline;
-}
-.btn-drive-close {
-  background: #000000 url('../img/remove.svg') center 4px no-repeat;
-  background-size: 12px;
-  height: 20px;
-  width: 20px;
-  border: none;
-  float: right;
 }
 .panel-body {
   border-bottom: 1px solid #b6b6b6;
@@ -111,7 +132,6 @@ div.panel-header .remove-button{
   top: 0;
   background-color: #f2f2f2;
 }
-
 
 .panel-icon-box {
   float: left;
@@ -176,7 +196,7 @@ div.panel-header .remove-button{
 }
 
 .price, .slider-price {
-  font-size: 15px;
+  font-size: 13px;
   margin-top: 2px;
 }
 .server-details {
@@ -219,8 +239,7 @@ div.panel-header .remove-button{
   margin: 0 0 8px 12px;
 }
 .slider-price {
-  width: 10%;
-  margin-left: 10%;
+  margin-left: 20px;
 }
 .server-checkbox-align {
   margin-left: 40%;
@@ -235,7 +254,7 @@ div.panel-header .remove-button{
   margin-left: 20px;
 }
 .server-checkbox-align .price {
-  padding-left: 28%;
+  margin-left: 62px;
   float: left;
 }
 
@@ -251,7 +270,7 @@ div.panel-header .remove-button{
 }
 
 .account-options .price {
-  padding-left: 19px;
+  padding-left: 20px;
 }
 
 .sys-options-label {
@@ -314,14 +333,7 @@ div.panel-header .remove-button{
 .modal .desktop-cals{
   padding: 10px 0 0 21px;
 }
-.modal .close {
-  font-size: 26px;
-  padding-top: 3px;
-  padding-right: 10px;
-  cursor: pointer;
-  color: white;
-  opacity: 1;
-}
+
 .modal label {
   font-weight: 300;
 }
