--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -12,25 +12,27 @@
 */
 
 .slider-handle {
-  border-radius: 0;
-  background-image: none;
   cursor: pointer;
   background-color: #313785;
+  background-image: none;
+  z-index: 2;
+  border-radius: 0;
+  border: 1px solid #444444;
+  position: absolute;
   top: -.3em;
   margin-left: -.6em;
-  position: absolute;
-  z-index: 2;
   width: 1.2em;
   height: 1.2em;
-  border: 1px solid #444444;
 }
 
 .slider {
+  cursor: pointer;
+  background-color: #f2f2f2;
+  position: relative;
+  border: 1px solid #000000;
+
   height: 8px;
   width: 248px;
-  background-color: #f2f2f2;
-  border: 1px solid #000000;
-  position: relative;
   margin-top: 6px;
   margin-left: 12px;
   border-radius: 5px;
