--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -196,6 +196,10 @@ div.panel-header h1 {
   margin-bottom: 20px;
 }
 
+.account-options .free.price {
+  padding-left: 184px;
+}
+
 .price, .slider-price {
   font-size: 13px;
   margin-top: 2px;
