--- a/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
+++ b/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
@@ -6773,9 +6773,9 @@ ol.comment-list li p.meta strong {
   border-left: 1px solid #939393;
   min-height:77px;
   width:225px;
-  
+
   margin-left:30px;
-  
+
   padding-left:25px!important;
   padding-right:0!important;
 }*/
@@ -7827,7 +7827,7 @@ content: '\201D';
 font-size:66px;
 font-family:Georgia, "Times New Roman", Times, serif;
 padding-left: 20px;
-} 
+}
 */
 
 blockquote {
@@ -8044,6 +8044,34 @@ div.widefooter div.container {
 }
 #mockup {} #offerarea {
     display: none;
+}
+a.freetrialbottom.disabled {
+    background: rgba(0,0,0,0.2);
+    pointer-events: none;
+    color: #eee;
+}
+
+a.freetrialbottom {
+    cursor: pointer;
+    position: absolute;
+    font-size: 24px;
+    color: #FFF;
+    font-weight: bold;
+    height: 40px;
+    line-height: 40px;
+    width: 198px;
+    background-color: #fbc517;
+    border: 1px solid #fbac29;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 4px;
+}
+a.freetrialbottom:hover, a.signup:hover, .yellow-nohover:hover {
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    color: white;
 }
 a.freetrialtop {
     position: absolute;
